# vcpkg-tool

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Generate-SpdxLicenseList.ps1  LICENSE.txt  LocProject.json  NOTICE.txt  PolicheckExclusion.xml  README.md  README_ko_KR.md  README_zh_CN.md  SUPPORT.md  cgmanifest.json  format.diff  vcpkg-configuration.json  vcpkg.json
.config/1espt/: PipelineAutobaseliningConfig.yml
.devcontainer/: Dockerfile  devcontainer.json
.gdn/: .gdnsuppress
.github/: copilot-instructions.md
.github/workflows/: build.yaml  ci.yaml  matchers.json  pr.yaml
azure-pipelines/: .npmrc-internal  Create-PRDiff.ps1  Format-CxxCode.ps1  Format-LocalizationFiles.ps1  arch-independent-signing.signproj  asan.supp  binary-signing.signproj  end-to-end-tests-prelude.ps1  end-to-end-tests.ps1  json-schema-tests.ps1  localization.yml  lsan.supp  mint-readonly-bundle.ps1  nuget-package.signproj  packages.config  pipelines.yml  readonly-bundleconfig.json  setup-gcc6-vm.sh  signing-nuget.config  signing.signproj  signing.yml  vcpkg-ce-sha.txt  vcpkg-rhel-7-5.json  vcpkg-scripts-sha.txt  vcpkg-ubuntu-20-04-docker.json
azure-pipelines/e2e-ports/broken-symlink/src/: CMakeLists.txt  hello-broken-symlink.h  hello.cpp  hello.def
azure-pipelines/e2e-ports/overlays/vcpkg-cmake-config-many-targets/src/: CMakeLists.txt  many-targets.def  many-targets.h
azure-pipelines/e2e-ports/overlays/vcpkg-hello-world-2/src/: CMakeLists.txt  hello-2.h
azure-pipelines/e2e-ports/vcpkg-explicit-usage-generated/src/: CMakeLists.txt  hello.cpp  hello.h
azure-pipelines/e2e-ports/vcpkg-internal-dll-with-no-exports/: CMakeLists.txt  portfile.cmake  vcpkg.json
azure-pipelines/e2e-specs/: autocomplete-posh-vcpkg.Tests.ps1
azure-pipelines/e2e_artifacts_registry/: index.yaml
azure-pipelines/e2e_ports/overlays/vcpkg-hello-world-1/src/: CMakeLists.txt  hello.cpp
azure-pipelines/e2e_projects/applocal-test/port/src/: CMakeLists.txt  mylib.cxx  mylib.h
azure-pipelines/end-to-end-tests-dir/: a-bench-llvm.ps1  add.ps1  artifacts.ps1  asset-caching.ps1  autocomplete-command.ps1  autocomplete-posh-vcpkg.Test.ps1  autocomplete-posh-vcpkg.ps1  autocomplete-posh-z-fail-linux.Test.ps1  autocomplete-posh-z-fail-win.Test.ps1  autocomplete-posh-z.Spec.ps1  autocomplete.ps1  backcompat-helpers.ps1  baseline-diff.ps1  binary-caching.ps1  binarycaching.ps1  build-command.ps1  build-missing.ps1  build-test-ports.ps1  bundles.ps1  ci-verify-versions.ps1  ci.ps1  classic-versions.ps1  clean-after-build.ps1  cli.ps1  commands.export.ps1  commands.extract.ps1  compilertracking.ps1  create.ps1  destdir-env.ps1  disable-metrics.ps1  download-only.ps1  e2e-registry.ps1  edit.ps1  env-passthrough.ps1  env-scripts.ps1  env-tools.ps1  export-port-with-registries.ps1  export-port.ps1  fetch.ps1  format-feature-baseline.ps1  (+33 more)
azure-pipelines/json-schema-tests-dir/: json-schema-bvt.test.ps1  vcpkg-ports-json.test.ps1
azure-pipelines/vcpkg-alpine/: Dockerfile
azure-pipelines/vcpkg-arm64/: Dockerfile  libstdcpp9-fix.diff  sources.list  toolchain.cmake
azure-pipelines/vcpkg-linux/: Dockerfile  dimitri_john_ledkov.asc  sources.list  toolchain.cmake
azure-pipelines/vs-insertion/: vcpkg.nuspec
ce/: ce.ps1  getting-started.md  projects.tsconfig.json  rush.json
ce/.scripts/: for-each.js  set-versions.js  sync-versions.js
ce/assets/: LICENSE.txt  package.json  prepare-deploy.js  wrapper-scripts.js
ce/ce/: .eslintignore  .eslintrc.yaml  constants.ts  i18n.ts  insights.ts  main.ts  package.json  session.ts  tsconfig.json  vcpkg.ts
ce/common/: .default-eslintrc.yaml  tsconfig.json
ce/docs/: command-line.md  info.yaml  updating.md
ce/test/: .eslintrc.yaml  .npmrc  mocha-config.yaml  package.json  readme.md  sequence-equal.ts  tsconfig.json
cmake/: CMakeRC_cmake_4.patch  FindBoringSSL.cmake  FindCMakeRC.cmake  FindLibCURL.cmake  FindOpenSSL.cmake  Findfmt.cmake  boringssl_warnings.patch  utilities.cmake
docs/: Get-BuildSuccessCounts.ps1  artifact.schema.json  benchmarking.md  command-guidelines.md  file-cache-settings.schema.json  fuzzing.md  layout.md  localization.md  manifest-info.schema.json  testing.md  validating-json-schemas.md  validationg-json-schemas.md  vcpkg-configuration.schema.json  vcpkg-schema-definitions.schema.json  vcpkg-tools.schema.json  vcpkg.schema.json  vcpkg_registry_release_process.md  vcpkg_tool_release_process.md
fuzzing-corpora/platform-expressions/: 0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  (+438 more)
include/: pch.h
install-vcpkg/: .vcpkg-root  install-vcpkg.ps1  install-vcpkg.sh  lock-versions.ps1  mint-gitregistry-bundle.ps1  mint-readonly-bundle.ps1  vcpkg-bundle.json
locales/: en.json  messages.cs.json  messages.de.json  messages.en.json  messages.es.json  messages.fr.json  messages.it.json  messages.ja.json  messages.json  messages.ko.json  messages.pl.json  messages.pt-BR.json  messages.ru.json  messages.tr.json  messages.zh-Hans.json  messages.zh-Hant.json
manual-testing/: deploy-to-vs.md  git-install-sources.md
pipelines/: localization.yml
scripts/: applocal.ps1  posh-vcpkg.psm1  vcpkg_initialize.ps1  verifyMessages.ps1
src/: closes-exit-minus-one.c  closes-exit-negative.c  closes-stdin.c  closes-stdout.c  reads-stdin.c  test-editor.c  test-script-asset-cache.c  tls12-download.c  vcpkg-configuration.json  vcpkg-fuzz-json.cpp  vcpkg-fuzz-platform-expressions.cpp  vcpkg-fuzz-utf8-decoder.cpp  vcpkg-in-development.ps1  vcpkg.cpp  vcpkg.json  vcpkg.manifest
vcpkg-artifacts/: .eslintrc.yaml  .mocharc.json  .npmrc  constants.ts  eslint.config.mjs  exports.ts  i18n.ts  main.ts  mocha-config.yaml  package-lock.json  package.json  session.ts  tsconfig.json  vcpkg.ts  version.ts
vcpkg-init/: lock-versions.ps1  mint-standalone-bundle.ps1  update-scripts-sha.ps1  vcpkg-cmd.cmd  vcpkg-init  vcpkg-init.ps1  vcpkg-scripts-sha.txt
(+1354 files in other folders)
